Basic structure with class attribute

--- a/public/index.html
+++ b/public/index.html
@@ -5,46 +5,67 @@
     <title>Nombre de la empresa</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <header>
-        <h1>Nombre de la empresa</h1>
+<body class="">
+    <header class="">
+        <img src="https://img.logoipsum.com/287.svg" />
+        <h1 class="">Every Company Website</h1>
         <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Acerca de nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
+            <ul class="">
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#servicios">Servicios</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <section>
-            <h2>Bienvenido a nuestro sitio web</h2>
-            <p>En la empresa XYZ nos dedicamos a...</p>
+    <main class="">
+        <section id="inicio" class="">
+            <h2 class="">Bienvenido a nuestro sitio web</h2>
+            <div class="">
+                <p class="">En nuestra empresa, nos enorgullecemos de ofrecer soluciones innovadoras y de alta
+                    calidad a nuestros clientes.
+                    Nuestro equipo altamente capacitado está comprometido en proporcionar los mejores productos y
+                    servicios que
+                    satisfacen las necesidades de nuestros clientes.</p>
+                <p class="">Nos esforzamos por mantener altos estándares de calidad en todo lo que hacemos. Desde la
+                    selección de materias primas
+                    hasta la entrega final, hacemos todo lo posible para garantizar la satisfacción de nuestros
+                    clientes.</p>
+                <p class="">Nuestro objetivo es ser la mejor opción en el mercado y por eso, trabajamos
+                    incansablemente para superar las
+                    expectativas de nuestros clientes. Siempre nos mantenemos a la vanguardia de las últimas tendencias
+                    y tecnologías
+                    para ofrecer productos y servicios que sean realmente excepcionales.</p>
+                <p class="">Contáctanos hoy para conocer cómo podemos ayudarte a cumplir tus objetivos y mejorar tu
+                    negocio. ¡Te esperamos!</p>
+            </div>
         </section>
-        <section>
-            <h2>Nuestros productos</h2>
-            <ul>
-                <li>Producto 1</li>
-                <li>Producto 2</li>
-                <li>Producto 3</li>
+        <section id="productos" class="">
+            <h2 class="">Nuestros productos</h2>
+            <ul class="">
+                <li class="" />Innovación</li>
+                <li class="" />Tecnología</li>
+                <li class="" />liderazgo</li>
             </ul>
         </section>
-        <section>
-            <h2>Nuestros servicios</h2>
-            <ul>
-                <li>Servicio 1</li>
-                <li>Servicio 2</li>
-                <li>Servicio 3</li>
+        <section id="servicios" class="">
+            <h2 class="">Nuestros servicios</h2>
+            <ul class="">
+                <li class="" /></li>
+                <li class="" /></li>
+                <li class="" /></li>
             </ul>
+        </section>
+        <section id="contacto" class="">
+            <h2 class="">Contacto</h2>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2023 Empresa XYZ</p>
+    <footer class="">
+        <p class="">&copy; 2023 Every company website Inc.</p>
     </footer>
 </body>
 
